deploy: dd2538ec8cff7be2e20c89c247bfb6538a3156dd

--- a/master/genindex.html
+++ b/master/genindex.html
@@ -385,7 +385,7 @@
 </li>
         <li><a href="dgbowl_schemas.yadg.dataschema_4_1.html#dgbowl_schemas.yadg.dataschema_4_1.input.Input.encoding">(dgbowl_schemas.yadg.dataschema_4_1.input.Input attribute)</a>
 </li>
-        <li><a href="dgbowl_schemas.yadg.dataschema_4_1.html#dgbowl_schemas.yadg.dataschema_4_1.step.ElectroChem.ECInput.encoding">(dgbowl_schemas.yadg.dataschema_4_1.step.ElectroChem.ECInput attribute)</a>
+        <li><a href="dgbowl_schemas.yadg.dataschema_4_1.html#dgbowl_schemas.yadg.dataschema_4_1.step.ElectroChem.Input.encoding">(dgbowl_schemas.yadg.dataschema_4_1.step.ElectroChem.Input attribute)</a>
 </li>
       </ul></li>
       <li><a href="dgbowl_schemas.yadg.dataschema_4_0.html#dgbowl_schemas.yadg.dataschema_4_0.input.Input.exclude">exclude (dgbowl_schemas.yadg.dataschema_4_0.input.Input attribute)</a>
