deploy: 1007078ab542447686a3128b186cf0863ba61f3a

--- a/master/genindex.html
+++ b/master/genindex.html
@@ -81,6 +81,7 @@
  | <a href="#L"><strong>L</strong></a>
  | <a href="#M"><strong>M</strong></a>
  | <a href="#N"><strong>N</strong></a>
+ | <a href="#O"><strong>O</strong></a>
  | <a href="#P"><strong>P</strong></a>
  | <a href="#R"><strong>R</strong></a>
  | <a href="#S"><strong>S</strong></a>
@@ -203,6 +204,8 @@
         <li><a href="dgbowl_schemas.yadg.dataschema_4_1.html#dgbowl_schemas.yadg.dataschema_4_1.step.ChromTrace.Params.detectors">(dgbowl_schemas.yadg.dataschema_4_1.step.ChromTrace.Params attribute)</a>
 </li>
       </ul></li>
+      <li><a href="dgbowl_schemas.tomato.payload_0_1.html#dgbowl_schemas.tomato.payload_0_1.method.Method.device">device (dgbowl_schemas.tomato.payload_0_1.method.Method attribute)</a>
+</li>
       <li>
     dgbowl_schemas
 
@@ -260,6 +263,43 @@
 </li>
       </ul></li>
       <li>
+    dgbowl_schemas.tomato
+
+      <ul>
+        <li><a href="dgbowl_schemas.tomato.html#module-dgbowl_schemas.tomato">module</a>
+</li>
+      </ul></li>
+      <li>
+    dgbowl_schemas.tomato.payload_0_1
+
+      <ul>
+        <li><a href="dgbowl_schemas.tomato.payload_0_1.html#module-dgbowl_schemas.tomato.payload_0_1">module</a>
+</li>
+      </ul></li>
+      <li>
+    dgbowl_schemas.tomato.payload_0_1.method
+
+      <ul>
+        <li><a href="dgbowl_schemas.tomato.payload_0_1.html#module-dgbowl_schemas.tomato.payload_0_1.method">module</a>
+</li>
+      </ul></li>
+      <li>
+    dgbowl_schemas.tomato.payload_0_1.sample
+
+      <ul>
+        <li><a href="dgbowl_schemas.tomato.payload_0_1.html#module-dgbowl_schemas.tomato.payload_0_1.sample">module</a>
+</li>
+      </ul></li>
+      <li>
+    dgbowl_schemas.tomato.payload_0_1.tomato
+
+      <ul>
+        <li><a href="dgbowl_schemas.tomato.payload_0_1.html#module-dgbowl_schemas.tomato.payload_0_1.tomato">module</a>
+</li>
+      </ul></li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li>
     dgbowl_schemas.yadg
 
       <ul>
@@ -280,8 +320,6 @@
         <li><a href="dgbowl_schemas.yadg.dataschema_4_0.html#module-dgbowl_schemas.yadg.dataschema_4_0.externaldate">module</a>
 </li>
       </ul></li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li>
     dgbowl_schemas.yadg.dataschema_4_0.input
 
@@ -457,6 +495,10 @@
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="dgbowl_schemas.dgpost_recipe.html#dgbowl_schemas.dgpost_recipe.schema.RecipeSchema.extract">extract (dgbowl_schemas.dgpost_recipe.schema.RecipeSchema attribute)</a>
+</li>
+      <li><a href="dgbowl_schemas.tomato.payload_0_1.html#dgbowl_schemas.tomato.payload_0_1.Payload.extract_methodfile">extract_methodfile() (dgbowl_schemas.tomato.payload_0_1.Payload class method)</a>
+</li>
+      <li><a href="dgbowl_schemas.tomato.payload_0_1.html#dgbowl_schemas.tomato.payload_0_1.Payload.extract_samplefile">extract_samplefile() (dgbowl_schemas.tomato.payload_0_1.Payload class method)</a>
 </li>
   </ul></td>
 </tr></table>
@@ -660,9 +702,11 @@
         <li><a href="dgbowl_schemas.yadg.dataschema_4_1.html#dgbowl_schemas.yadg.dataschema_4_1.metadata.Metadata.Provenance.metadata">(dgbowl_schemas.yadg.dataschema_4_1.metadata.Metadata.Provenance attribute)</a>
 </li>
       </ul></li>
-      <li><a href="dgbowl_schemas.yadg.dataschema_4_0.html#dgbowl_schemas.yadg.dataschema_4_0.step.QFTrace.Params.method">method (dgbowl_schemas.yadg.dataschema_4_0.step.QFTrace.Params attribute)</a>
+      <li><a href="dgbowl_schemas.tomato.payload_0_1.html#dgbowl_schemas.tomato.payload_0_1.Payload.method">method (dgbowl_schemas.tomato.payload_0_1.Payload attribute)</a>
 
       <ul>
+        <li><a href="dgbowl_schemas.yadg.dataschema_4_0.html#dgbowl_schemas.yadg.dataschema_4_0.step.QFTrace.Params.method">(dgbowl_schemas.yadg.dataschema_4_0.step.QFTrace.Params attribute)</a>
+</li>
         <li><a href="dgbowl_schemas.yadg.dataschema_4_1.html#dgbowl_schemas.yadg.dataschema_4_1.step.QFTrace.Params.method">(dgbowl_schemas.yadg.dataschema_4_1.step.QFTrace.Params attribute)</a>
 </li>
       </ul></li>
@@ -693,6 +737,16 @@
         <li><a href="dgbowl_schemas.dgpost_recipe.html#module-dgbowl_schemas.dgpost_recipe.schema">dgbowl_schemas.dgpost_recipe.schema</a>
 </li>
         <li><a href="dgbowl_schemas.dgpost_recipe.html#module-dgbowl_schemas.dgpost_recipe.transform">dgbowl_schemas.dgpost_recipe.transform</a>
+</li>
+        <li><a href="dgbowl_schemas.tomato.html#module-dgbowl_schemas.tomato">dgbowl_schemas.tomato</a>
+</li>
+        <li><a href="dgbowl_schemas.tomato.payload_0_1.html#module-dgbowl_schemas.tomato.payload_0_1">dgbowl_schemas.tomato.payload_0_1</a>
+</li>
+        <li><a href="dgbowl_schemas.tomato.payload_0_1.html#module-dgbowl_schemas.tomato.payload_0_1.method">dgbowl_schemas.tomato.payload_0_1.method</a>
+</li>
+        <li><a href="dgbowl_schemas.tomato.payload_0_1.html#module-dgbowl_schemas.tomato.payload_0_1.sample">dgbowl_schemas.tomato.payload_0_1.sample</a>
+</li>
+        <li><a href="dgbowl_schemas.tomato.payload_0_1.html#module-dgbowl_schemas.tomato.payload_0_1.tomato">dgbowl_schemas.tomato.payload_0_1.tomato</a>
 </li>
         <li><a href="dgbowl_schemas.yadg.html#module-dgbowl_schemas.yadg">dgbowl_schemas.yadg</a>
 </li>
@@ -731,11 +785,21 @@
 <h2 id="N">N</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="dgbowl_schemas.dgpost_recipe.html#dgbowl_schemas.dgpost_recipe.plot.Plot.ncols">ncols (dgbowl_schemas.dgpost_recipe.plot.Plot attribute)</a>
+      <li><a href="dgbowl_schemas.tomato.payload_0_1.html#dgbowl_schemas.tomato.payload_0_1.sample.Sample.name">name (dgbowl_schemas.tomato.payload_0_1.sample.Sample attribute)</a>
 </li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="dgbowl_schemas.dgpost_recipe.html#dgbowl_schemas.dgpost_recipe.plot.Plot.ncols">ncols (dgbowl_schemas.dgpost_recipe.plot.Plot attribute)</a>
+</li>
       <li><a href="dgbowl_schemas.dgpost_recipe.html#dgbowl_schemas.dgpost_recipe.plot.Plot.nrows">nrows (dgbowl_schemas.dgpost_recipe.plot.Plot attribute)</a>
+</li>
+  </ul></td>
+</tr></table>
+
+<h2 id="O">O</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="dgbowl_schemas.tomato.payload_0_1.html#dgbowl_schemas.tomato.payload_0_1.tomato.Tomato.output">output (dgbowl_schemas.tomato.payload_0_1.tomato.Tomato attribute)</a>
 </li>
   </ul></td>
 </tr></table>
@@ -828,6 +892,8 @@
       <li><a href="dgbowl_schemas.dgpost_recipe.html#dgbowl_schemas.dgpost_recipe.load.Load.path">path (dgbowl_schemas.dgpost_recipe.load.Load attribute)</a>
 
       <ul>
+        <li><a href="dgbowl_schemas.tomato.payload_0_1.html#dgbowl_schemas.tomato.payload_0_1.tomato.Tomato.Output.path">(dgbowl_schemas.tomato.payload_0_1.tomato.Tomato.Output attribute)</a>
+</li>
         <li><a href="dgbowl_schemas.yadg.dataschema_4_0.html#dgbowl_schemas.yadg.dataschema_4_0.externaldate.ExternalDateFile.Content.path">(dgbowl_schemas.yadg.dataschema_4_0.externaldate.ExternalDateFile.Content attribute)</a>
 </li>
         <li><a href="dgbowl_schemas.yadg.dataschema_4_1.html#dgbowl_schemas.yadg.dataschema_4_1.externaldate.ExternalDateFile.Content.path">(dgbowl_schemas.yadg.dataschema_4_1.externaldate.ExternalDateFile.Content attribute)</a>
@@ -841,9 +907,11 @@
       </ul></li>
       <li><a href="dgbowl_schemas.dgpost_recipe.html#dgbowl_schemas.dgpost_recipe.schema.RecipeSchema.plot">plot (dgbowl_schemas.dgpost_recipe.schema.RecipeSchema attribute)</a>
 </li>
-      <li><a href="dgbowl_schemas.yadg.dataschema_4_0.html#dgbowl_schemas.yadg.dataschema_4_0.input.Input.prefix">prefix (dgbowl_schemas.yadg.dataschema_4_0.input.Input attribute)</a>
+      <li><a href="dgbowl_schemas.tomato.payload_0_1.html#dgbowl_schemas.tomato.payload_0_1.tomato.Tomato.Output.prefix">prefix (dgbowl_schemas.tomato.payload_0_1.tomato.Tomato.Output attribute)</a>
 
       <ul>
+        <li><a href="dgbowl_schemas.yadg.dataschema_4_0.html#dgbowl_schemas.yadg.dataschema_4_0.input.Input.prefix">(dgbowl_schemas.yadg.dataschema_4_0.input.Input attribute)</a>
+</li>
         <li><a href="dgbowl_schemas.yadg.dataschema_4_1.html#dgbowl_schemas.yadg.dataschema_4_1.input.Input.prefix">(dgbowl_schemas.yadg.dataschema_4_1.input.Input attribute)</a>
 </li>
       </ul></li>
@@ -877,6 +945,8 @@
 <h2 id="S">S</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="dgbowl_schemas.tomato.payload_0_1.html#dgbowl_schemas.tomato.payload_0_1.Payload.sample">sample (dgbowl_schemas.tomato.payload_0_1.Payload attribute)</a>
+</li>
       <li><a href="dgbowl_schemas.dgpost_recipe.html#dgbowl_schemas.dgpost_recipe.plot.Plot.save">save (dgbowl_schemas.dgpost_recipe.plot.Plot attribute)</a>
 
       <ul>
@@ -977,6 +1047,8 @@
         <li><a href="dgbowl_schemas.yadg.dataschema_4_1.html#dgbowl_schemas.yadg.dataschema_4_1.step.XRDTrace.tag">(dgbowl_schemas.yadg.dataschema_4_1.step.XRDTrace attribute)</a>
 </li>
       </ul></li>
+      <li><a href="dgbowl_schemas.tomato.payload_0_1.html#dgbowl_schemas.tomato.payload_0_1.method.Method.technique">technique (dgbowl_schemas.tomato.payload_0_1.method.Method attribute)</a>
+</li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="dgbowl_schemas.yadg.dataschema_4_0.html#dgbowl_schemas.yadg.dataschema_4_0.step.QFTrace.Params.threshold">threshold (dgbowl_schemas.yadg.dataschema_4_0.step.QFTrace.Params attribute)</a>
@@ -1017,7 +1089,11 @@
       </ul></li>
       <li><a href="dgbowl_schemas.yadg.html#dgbowl_schemas.yadg.to_dataschema">to_dataschema() (in module dgbowl_schemas.yadg)</a>
 </li>
+      <li><a href="dgbowl_schemas.tomato.html#dgbowl_schemas.tomato.to_payload">to_payload() (in module dgbowl_schemas.tomato)</a>
+</li>
       <li><a href="dgbowl_schemas.dgpost_recipe.html#dgbowl_schemas.dgpost_recipe.plot.SeriesIndex.to_units">to_units (dgbowl_schemas.dgpost_recipe.plot.SeriesIndex attribute)</a>
+</li>
+      <li><a href="dgbowl_schemas.tomato.payload_0_1.html#dgbowl_schemas.tomato.payload_0_1.Payload.tomato">tomato (dgbowl_schemas.tomato.payload_0_1.Payload attribute)</a>
 </li>
       <li><a href="dgbowl_schemas.dgpost_recipe.html#dgbowl_schemas.dgpost_recipe.schema.RecipeSchema.transform">transform (dgbowl_schemas.dgpost_recipe.schema.RecipeSchema attribute)</a>
 </li>
@@ -1047,6 +1123,8 @@
         <li><a href="dgbowl_schemas.yadg.dataschema_4_1.html#dgbowl_schemas.yadg.dataschema_4_1.step.BasicCSV.Params.units">(dgbowl_schemas.yadg.dataschema_4_1.step.BasicCSV.Params attribute)</a>
 </li>
       </ul></li>
+      <li><a href="dgbowl_schemas.tomato.payload_0_1.html#dgbowl_schemas.tomato.payload_0_1.tomato.Tomato.unlock_when_done">unlock_when_done (dgbowl_schemas.tomato.payload_0_1.tomato.Tomato attribute)</a>
+</li>
       <li><a href="dgbowl_schemas.dgpost_recipe.html#dgbowl_schemas.dgpost_recipe.transform.Transform.using">using (dgbowl_schemas.dgpost_recipe.transform.Transform attribute)</a>
 
       <ul>
@@ -1077,9 +1155,13 @@
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="dgbowl_schemas.dgpost_recipe.html#dgbowl_schemas.dgpost_recipe.extract.Constant.value">value (dgbowl_schemas.dgpost_recipe.extract.Constant attribute)</a>
 </li>
+      <li><a href="dgbowl_schemas.tomato.payload_0_1.html#dgbowl_schemas.tomato.payload_0_1.tomato.Tomato.verbosity">verbosity (dgbowl_schemas.tomato.payload_0_1.tomato.Tomato attribute)</a>
+</li>
       <li><a href="dgbowl_schemas.dgpost_recipe.html#dgbowl_schemas.dgpost_recipe.schema.RecipeSchema.version">version (dgbowl_schemas.dgpost_recipe.schema.RecipeSchema attribute)</a>
 
       <ul>
+        <li><a href="dgbowl_schemas.tomato.payload_0_1.html#dgbowl_schemas.tomato.payload_0_1.Payload.version">(dgbowl_schemas.tomato.payload_0_1.Payload attribute)</a>
+</li>
         <li><a href="dgbowl_schemas.yadg.dataschema_4_0.html#dgbowl_schemas.yadg.dataschema_4_0.metadata.Metadata.version">(dgbowl_schemas.yadg.dataschema_4_0.metadata.Metadata attribute)</a>
 </li>
         <li><a href="dgbowl_schemas.yadg.dataschema_4_1.html#dgbowl_schemas.yadg.dataschema_4_1.metadata.Metadata.version">(dgbowl_schemas.yadg.dataschema_4_1.metadata.Metadata attribute)</a>
