deploy: bd309cebe6ab068592090182374ab88795e01168

--- a/master/genindex.html
+++ b/master/genindex.html
@@ -243,7 +243,11 @@
 </li>
       </ul></li>
       <li><a href="dgbowl_schemas.tomato.payload_0_1.html#dgbowl_schemas.tomato.payload_0_1.method.Method.device">device (dgbowl_schemas.tomato.payload_0_1.method.Method attribute)</a>
+
+      <ul>
+        <li><a href="dgbowl_schemas.tomato.payload_0_2.html#dgbowl_schemas.tomato.payload_0_2.method.Method.device">(dgbowl_schemas.tomato.payload_0_2.method.Method attribute)</a>
 </li>
+      </ul></li>
       <li>
     dgbowl_schemas
 
@@ -356,8 +360,6 @@
         <li><a href="dgbowl_schemas.tomato.payload_0_1.html#module-dgbowl_schemas.tomato.payload_0_1">module</a>
 </li>
       </ul></li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li>
     dgbowl_schemas.tomato.payload_0_1.method
 
@@ -372,11 +374,41 @@
         <li><a href="dgbowl_schemas.tomato.payload_0_1.html#module-dgbowl_schemas.tomato.payload_0_1.sample">module</a>
 </li>
       </ul></li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li>
     dgbowl_schemas.tomato.payload_0_1.tomato
 
       <ul>
         <li><a href="dgbowl_schemas.tomato.payload_0_1.html#module-dgbowl_schemas.tomato.payload_0_1.tomato">module</a>
+</li>
+      </ul></li>
+      <li>
+    dgbowl_schemas.tomato.payload_0_2
+
+      <ul>
+        <li><a href="dgbowl_schemas.tomato.payload_0_2.html#module-dgbowl_schemas.tomato.payload_0_2">module</a>
+</li>
+      </ul></li>
+      <li>
+    dgbowl_schemas.tomato.payload_0_2.method
+
+      <ul>
+        <li><a href="dgbowl_schemas.tomato.payload_0_2.html#module-dgbowl_schemas.tomato.payload_0_2.method">module</a>
+</li>
+      </ul></li>
+      <li>
+    dgbowl_schemas.tomato.payload_0_2.sample
+
+      <ul>
+        <li><a href="dgbowl_schemas.tomato.payload_0_2.html#module-dgbowl_schemas.tomato.payload_0_2.sample">module</a>
+</li>
+      </ul></li>
+      <li>
+    dgbowl_schemas.tomato.payload_0_2.tomato
+
+      <ul>
+        <li><a href="dgbowl_schemas.tomato.payload_0_2.html#module-dgbowl_schemas.tomato.payload_0_2.tomato">module</a>
 </li>
       </ul></li>
       <li>
@@ -581,9 +613,17 @@
 </li>
       </ul></li>
       <li><a href="dgbowl_schemas.tomato.payload_0_1.html#dgbowl_schemas.tomato.payload_0_1.Payload.extract_methodfile">extract_methodfile() (dgbowl_schemas.tomato.payload_0_1.Payload class method)</a>
+
+      <ul>
+        <li><a href="dgbowl_schemas.tomato.payload_0_2.html#dgbowl_schemas.tomato.payload_0_2.Payload.extract_methodfile">(dgbowl_schemas.tomato.payload_0_2.Payload class method)</a>
 </li>
+      </ul></li>
       <li><a href="dgbowl_schemas.tomato.payload_0_1.html#dgbowl_schemas.tomato.payload_0_1.Payload.extract_samplefile">extract_samplefile() (dgbowl_schemas.tomato.payload_0_1.Payload class method)</a>
+
+      <ul>
+        <li><a href="dgbowl_schemas.tomato.payload_0_2.html#dgbowl_schemas.tomato.payload_0_2.Payload.extract_samplefile">(dgbowl_schemas.tomato.payload_0_2.Payload class method)</a>
 </li>
+      </ul></li>
   </ul></td>
 </tr></table>
 
@@ -658,6 +698,8 @@
         <li><a href="dgbowl_schemas.yadg.dataschema_4_1.html#dgbowl_schemas.yadg.dataschema_4_1.timestamp.TimestampSpec.format">(dgbowl_schemas.yadg.dataschema_4_1.timestamp.TimestampSpec attribute)</a>
 </li>
       </ul></li>
+      <li><a href="dgbowl_schemas.tomato.payload_0_2.html#dgbowl_schemas.tomato.payload_0_2.tomato.Tomato.Snapshot.frequency">frequency (dgbowl_schemas.tomato.payload_0_2.tomato.Tomato.Snapshot attribute)</a>
+</li>
       <li><a href="dgbowl_schemas.dgpost.recipe_1_0.html#dgbowl_schemas.dgpost.recipe_1_0.extract.Extract.from_">from_ (dgbowl_schemas.dgpost.recipe_1_0.extract.Extract attribute)</a>
 
       <ul>
@@ -827,6 +869,8 @@
       <li><a href="dgbowl_schemas.tomato.payload_0_1.html#dgbowl_schemas.tomato.payload_0_1.Payload.method">method (dgbowl_schemas.tomato.payload_0_1.Payload attribute)</a>
 
       <ul>
+        <li><a href="dgbowl_schemas.tomato.payload_0_2.html#dgbowl_schemas.tomato.payload_0_2.Payload.method">(dgbowl_schemas.tomato.payload_0_2.Payload attribute)</a>
+</li>
         <li><a href="dgbowl_schemas.yadg.dataschema_4_0.html#dgbowl_schemas.yadg.dataschema_4_0.step.QFTrace.Params.method">(dgbowl_schemas.yadg.dataschema_4_0.step.QFTrace.Params attribute)</a>
 </li>
         <li><a href="dgbowl_schemas.yadg.dataschema_4_1.html#dgbowl_schemas.yadg.dataschema_4_1.step.QFTrace.Params.method">(dgbowl_schemas.yadg.dataschema_4_1.step.QFTrace.Params attribute)</a>
@@ -886,6 +930,14 @@
 </li>
         <li><a href="dgbowl_schemas.tomato.payload_0_1.html#module-dgbowl_schemas.tomato.payload_0_1.tomato">dgbowl_schemas.tomato.payload_0_1.tomato</a>
 </li>
+        <li><a href="dgbowl_schemas.tomato.payload_0_2.html#module-dgbowl_schemas.tomato.payload_0_2">dgbowl_schemas.tomato.payload_0_2</a>
+</li>
+        <li><a href="dgbowl_schemas.tomato.payload_0_2.html#module-dgbowl_schemas.tomato.payload_0_2.method">dgbowl_schemas.tomato.payload_0_2.method</a>
+</li>
+        <li><a href="dgbowl_schemas.tomato.payload_0_2.html#module-dgbowl_schemas.tomato.payload_0_2.sample">dgbowl_schemas.tomato.payload_0_2.sample</a>
+</li>
+        <li><a href="dgbowl_schemas.tomato.payload_0_2.html#module-dgbowl_schemas.tomato.payload_0_2.tomato">dgbowl_schemas.tomato.payload_0_2.tomato</a>
+</li>
         <li><a href="dgbowl_schemas.yadg.html#module-dgbowl_schemas.yadg">dgbowl_schemas.yadg</a>
 </li>
         <li><a href="dgbowl_schemas.yadg.dataschema_4_0.html#module-dgbowl_schemas.yadg.dataschema_4_0">dgbowl_schemas.yadg.dataschema_4_0</a>
@@ -924,7 +976,11 @@
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="dgbowl_schemas.tomato.payload_0_1.html#dgbowl_schemas.tomato.payload_0_1.sample.Sample.name">name (dgbowl_schemas.tomato.payload_0_1.sample.Sample attribute)</a>
+
+      <ul>
+        <li><a href="dgbowl_schemas.tomato.payload_0_2.html#dgbowl_schemas.tomato.payload_0_2.sample.Sample.name">(dgbowl_schemas.tomato.payload_0_2.sample.Sample attribute)</a>
 </li>
+      </ul></li>
       <li><a href="dgbowl_schemas.dgpost.recipe_1_0.html#dgbowl_schemas.dgpost.recipe_1_0.plot.Plot.ncols">ncols (dgbowl_schemas.dgpost.recipe_1_0.plot.Plot attribute)</a>
 
       <ul>
@@ -946,7 +1002,11 @@
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="dgbowl_schemas.tomato.payload_0_1.html#dgbowl_schemas.tomato.payload_0_1.tomato.Tomato.output">output (dgbowl_schemas.tomato.payload_0_1.tomato.Tomato attribute)</a>
+
+      <ul>
+        <li><a href="dgbowl_schemas.tomato.payload_0_2.html#dgbowl_schemas.tomato.payload_0_2.tomato.Tomato.output">(dgbowl_schemas.tomato.payload_0_2.tomato.Tomato attribute)</a>
 </li>
+      </ul></li>
   </ul></td>
 </tr></table>
 
@@ -1042,6 +1102,10 @@
 </li>
         <li><a href="dgbowl_schemas.tomato.payload_0_1.html#dgbowl_schemas.tomato.payload_0_1.tomato.Tomato.Output.path">(dgbowl_schemas.tomato.payload_0_1.tomato.Tomato.Output attribute)</a>
 </li>
+        <li><a href="dgbowl_schemas.tomato.payload_0_2.html#dgbowl_schemas.tomato.payload_0_2.tomato.Tomato.Output.path">(dgbowl_schemas.tomato.payload_0_2.tomato.Tomato.Output attribute)</a>
+</li>
+        <li><a href="dgbowl_schemas.tomato.payload_0_2.html#dgbowl_schemas.tomato.payload_0_2.tomato.Tomato.Snapshot.path">(dgbowl_schemas.tomato.payload_0_2.tomato.Tomato.Snapshot attribute)</a>
+</li>
         <li><a href="dgbowl_schemas.yadg.dataschema_4_0.html#dgbowl_schemas.yadg.dataschema_4_0.externaldate.ExternalDateFile.Content.path">(dgbowl_schemas.yadg.dataschema_4_0.externaldate.ExternalDateFile.Content attribute)</a>
 </li>
         <li><a href="dgbowl_schemas.yadg.dataschema_4_1.html#dgbowl_schemas.yadg.dataschema_4_1.externaldate.ExternalDateFile.Content.path">(dgbowl_schemas.yadg.dataschema_4_1.externaldate.ExternalDateFile.Content attribute)</a>
@@ -1062,6 +1126,10 @@
       <li><a href="dgbowl_schemas.tomato.payload_0_1.html#dgbowl_schemas.tomato.payload_0_1.tomato.Tomato.Output.prefix">prefix (dgbowl_schemas.tomato.payload_0_1.tomato.Tomato.Output attribute)</a>
 
       <ul>
+        <li><a href="dgbowl_schemas.tomato.payload_0_2.html#dgbowl_schemas.tomato.payload_0_2.tomato.Tomato.Output.prefix">(dgbowl_schemas.tomato.payload_0_2.tomato.Tomato.Output attribute)</a>
+</li>
+        <li><a href="dgbowl_schemas.tomato.payload_0_2.html#dgbowl_schemas.tomato.payload_0_2.tomato.Tomato.Snapshot.prefix">(dgbowl_schemas.tomato.payload_0_2.tomato.Tomato.Snapshot attribute)</a>
+</li>
         <li><a href="dgbowl_schemas.yadg.dataschema_4_0.html#dgbowl_schemas.yadg.dataschema_4_0.input.Input.prefix">(dgbowl_schemas.yadg.dataschema_4_0.input.Input attribute)</a>
 </li>
         <li><a href="dgbowl_schemas.yadg.dataschema_4_1.html#dgbowl_schemas.yadg.dataschema_4_1.input.Input.prefix">(dgbowl_schemas.yadg.dataschema_4_1.input.Input attribute)</a>
@@ -1100,7 +1168,11 @@
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="dgbowl_schemas.tomato.payload_0_1.html#dgbowl_schemas.tomato.payload_0_1.Payload.sample">sample (dgbowl_schemas.tomato.payload_0_1.Payload attribute)</a>
+
+      <ul>
+        <li><a href="dgbowl_schemas.tomato.payload_0_2.html#dgbowl_schemas.tomato.payload_0_2.Payload.sample">(dgbowl_schemas.tomato.payload_0_2.Payload attribute)</a>
 </li>
+      </ul></li>
       <li><a href="dgbowl_schemas.dgpost.recipe_1_0.html#dgbowl_schemas.dgpost.recipe_1_0.plot.Plot.save">save (dgbowl_schemas.dgpost.recipe_1_0.plot.Plot attribute)</a>
 
       <ul>
@@ -1135,6 +1207,8 @@
       </ul></li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="dgbowl_schemas.tomato.payload_0_2.html#dgbowl_schemas.tomato.payload_0_2.tomato.Tomato.snapshot">snapshot (dgbowl_schemas.tomato.payload_0_2.tomato.Tomato attribute)</a>
+</li>
       <li><a href="dgbowl_schemas.yadg.dataschema_4_0.html#dgbowl_schemas.yadg.dataschema_4_0.step.ChromTrace.Params.species">species (dgbowl_schemas.yadg.dataschema_4_0.step.ChromTrace.Params attribute)</a>
 
       <ul>
@@ -1224,7 +1298,11 @@
 </li>
       </ul></li>
       <li><a href="dgbowl_schemas.tomato.payload_0_1.html#dgbowl_schemas.tomato.payload_0_1.method.Method.technique">technique (dgbowl_schemas.tomato.payload_0_1.method.Method attribute)</a>
+
+      <ul>
+        <li><a href="dgbowl_schemas.tomato.payload_0_2.html#dgbowl_schemas.tomato.payload_0_2.method.Method.technique">(dgbowl_schemas.tomato.payload_0_2.method.Method attribute)</a>
 </li>
+      </ul></li>
       <li><a href="dgbowl_schemas.yadg.dataschema_4_0.html#dgbowl_schemas.yadg.dataschema_4_0.step.QFTrace.Params.threshold">threshold (dgbowl_schemas.yadg.dataschema_4_0.step.QFTrace.Params attribute)</a>
 
       <ul>
@@ -1284,7 +1362,11 @@
 </li>
       </ul></li>
       <li><a href="dgbowl_schemas.tomato.payload_0_1.html#dgbowl_schemas.tomato.payload_0_1.Payload.tomato">tomato (dgbowl_schemas.tomato.payload_0_1.Payload attribute)</a>
+
+      <ul>
+        <li><a href="dgbowl_schemas.tomato.payload_0_2.html#dgbowl_schemas.tomato.payload_0_2.Payload.tomato">(dgbowl_schemas.tomato.payload_0_2.Payload attribute)</a>
 </li>
+      </ul></li>
       <li><a href="dgbowl_schemas.dgpost.recipe_1_0.html#dgbowl_schemas.dgpost.recipe_1_0.Recipe.transform">transform (dgbowl_schemas.dgpost.recipe_1_0.Recipe attribute)</a>
 
       <ul>
@@ -1324,7 +1406,11 @@
 </li>
       </ul></li>
       <li><a href="dgbowl_schemas.tomato.payload_0_1.html#dgbowl_schemas.tomato.payload_0_1.tomato.Tomato.unlock_when_done">unlock_when_done (dgbowl_schemas.tomato.payload_0_1.tomato.Tomato attribute)</a>
+
+      <ul>
+        <li><a href="dgbowl_schemas.tomato.payload_0_2.html#dgbowl_schemas.tomato.payload_0_2.tomato.Tomato.unlock_when_done">(dgbowl_schemas.tomato.payload_0_2.tomato.Tomato attribute)</a>
 </li>
+      </ul></li>
       <li><a href="dgbowl_schemas.dgpost.recipe_1_0.html#dgbowl_schemas.dgpost.recipe_1_0.transform.Transform.using">using (dgbowl_schemas.dgpost.recipe_1_0.transform.Transform attribute)</a>
 
       <ul>
@@ -1362,13 +1448,19 @@
 </li>
       </ul></li>
       <li><a href="dgbowl_schemas.tomato.payload_0_1.html#dgbowl_schemas.tomato.payload_0_1.tomato.Tomato.verbosity">verbosity (dgbowl_schemas.tomato.payload_0_1.tomato.Tomato attribute)</a>
+
+      <ul>
+        <li><a href="dgbowl_schemas.tomato.payload_0_2.html#dgbowl_schemas.tomato.payload_0_2.tomato.Tomato.verbosity">(dgbowl_schemas.tomato.payload_0_2.tomato.Tomato attribute)</a>
 </li>
+      </ul></li>
       <li><a href="dgbowl_schemas.dgpost.recipe_1_0.html#dgbowl_schemas.dgpost.recipe_1_0.Recipe.version">version (dgbowl_schemas.dgpost.recipe_1_0.Recipe attribute)</a>
 
       <ul>
         <li><a href="dgbowl_schemas.dgpost.recipe_1_1.html#dgbowl_schemas.dgpost.recipe_1_1.Recipe.version">(dgbowl_schemas.dgpost.recipe_1_1.Recipe attribute)</a>
 </li>
         <li><a href="dgbowl_schemas.tomato.payload_0_1.html#dgbowl_schemas.tomato.payload_0_1.Payload.version">(dgbowl_schemas.tomato.payload_0_1.Payload attribute)</a>
+</li>
+        <li><a href="dgbowl_schemas.tomato.payload_0_2.html#dgbowl_schemas.tomato.payload_0_2.Payload.version">(dgbowl_schemas.tomato.payload_0_2.Payload attribute)</a>
 </li>
         <li><a href="dgbowl_schemas.yadg.dataschema_4_0.html#dgbowl_schemas.yadg.dataschema_4_0.metadata.Metadata.version">(dgbowl_schemas.yadg.dataschema_4_0.metadata.Metadata attribute)</a>
 </li>
