deploy: 13bcaa32e7ed1e97774fd92d1cd20a904b60dd42

--- a/master/genindex.html
+++ b/master/genindex.html
@@ -1470,6 +1470,8 @@
         <li><a href="dgbowl_schemas.yadg.dataschema_4_2.html#dgbowl_schemas.yadg.dataschema_4_2.DataSchema.steps">(dgbowl_schemas.yadg.dataschema_4_2.DataSchema attribute)</a>
 </li>
       </ul></li>
+      <li><a href="dgbowl_schemas.yadg.dataschema_4_2.html#dgbowl_schemas.yadg.dataschema_4_2.step.BasicCSV.Params.strip">strip (dgbowl_schemas.yadg.dataschema_4_2.step.BasicCSV.Params attribute)</a>
+</li>
       <li><a href="dgbowl_schemas.dgpost.recipe_1_0.html#dgbowl_schemas.dgpost.recipe_1_0.plot.Plot.style">style (dgbowl_schemas.dgpost.recipe_1_0.plot.Plot attribute)</a>
 
       <ul>
