deploy: 5d830747e3c7fd9949666f8e874babf0eb9dc48b

--- a/master/dgbowl_schemas.yadg.dataschema_4_2.html
+++ b/master/dgbowl_schemas.yadg.dataschema_4_2.html
@@ -1650,7 +1650,7 @@ parsed data.</p>
 <dd><p>Returns a list of files to be processed by the <code class="xref py py-class docutils literal notranslate"><span class="pre">Step</span></code>.</p>
 <dl class="field-list simple">
 <dt class="field-odd">Return type</dt>
-<dd class="field-odd"><p><code class="xref py py-class docutils literal notranslate"><span class="pre">list</span></code>[<code class="xref py py-class docutils literal notranslate"><span class="pre">str</span></code>]</p>
+<dd class="field-odd"><p><code class="xref py py-class docutils literal notranslate"><span class="pre">List</span></code>[<code class="xref py py-class docutils literal notranslate"><span class="pre">str</span></code>]</p>
 </dd>
 </dl>
 </dd></dl>
