--- a/master/dgbowl_schemas.dgpost.html
+++ b/master/dgbowl_schemas.dgpost.html
@@ -74,9 +74,9 @@
         <div class="rst-content">
           <div role="navigation" aria-label="Page navigation">
   <ul class="wy-breadcrumbs">
-      <li><a href="index.html" class="icon icon-home"></a> &raquo;</li>
-          <li><a href="dgbowl_schemas.html">dgbowl_schemas package</a> &raquo;</li>
-      <li>dgbowl_schemas.dgpost package</li>
+      <li><a href="index.html" class="icon icon-home"></a></li>
+          <li class="breadcrumb-item"><a href="dgbowl_schemas.html">dgbowl_schemas package</a></li>
+      <li class="breadcrumb-item active">dgbowl_schemas.dgpost package</li>
       <li class="wy-breadcrumbs-aside">
             <a href="_sources/dgbowl_schemas.dgpost.rst.txt" rel="nofollow"> View page source</a>
       </li>
